--- a/Views/notFound.html
+++ b/Views/notFound.html
@@ -6,6 +6,14 @@
     <title>Page Not Found</title>
 </head>
 <body>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a class="active" href="/">Shop</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Not Found</h1>
 </body>
 </html>
