--- a/Views/shop.html
+++ b/Views/shop.html
@@ -38,7 +38,7 @@
 
         .main-header__item a {
             text-decoration: none;
-            color: white;
+            color: black;
             margin: 0 1rem;
 
         }
@@ -46,7 +46,7 @@
         .main-header__item a:hover,
         .main-header__item a:active,
         .main-header__item a.active {
-            color: #6200ff;
+            color: #3a0292;
 
         }
     </style>
