--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,6 +38,5 @@ main {
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-    color: #3a0292;
-
+    color: #34077e;
 }
